# freeswitch

./: .gitignore  Makefile.am  configure.ac  devel-bootstrap.sh  freeswitch.spec
debian/: bootstrap.sh  control-modules  rules  util.sh
src/: switch_core.c  switch_core_media.c  switch_rtp.c
src/mod/applications/mod_av/: avformat.c
src/mod/applications/mod_dptools/: mod_dptools.c
src/mod/codecs/mod_amr/test/: .gitignore
src/mod/poc/mod_poc_dialog/: Makefile.am  mod_poc_dialog.c
src/mod/poc/mod_poc_dlg/: Makefile.am  mod_poc_dlg.c
src/mod/poc/mod_poc_sctp/: Makefile.am  TODO.md  mod_poc_sctp.c
src/mod/poc/mod_poc_sctp/test/: sctp_client.exs
tests/unit/: .gitignore
